2017-03-02  Oliver Lemke  <olemke@core-dump.info>

	* doc/_templates/layout.html, doc/_static/theme.css:

	Add css file to overwrite theme settings.

	Instead of red, use default font color for literals in text.

2017-03-01  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/units/constants.py:

	Removed documentation entry for Kelvin-Celsius-conversion as it is not used
	when converting values with `pint`.

2017-03-01  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/constants.py, typhon/physics/units/constants.py:

	Added documentation for all defined constants.

	Removed deprecated constants R_d, R_w, M_d and M_w.

2017-02-28  Oliver Lemke  <olemke@core-dump.info>

	* Completely restructured the documentation layout. Having all
	functions/classes of a package documented on a single page made it
	very difficult to get a decent overview.

	Now, a list of functions and classes with short descriptions is
	generated for each package.

	See http://www.radiativetransfer.org/misc/typhon/doc-trunk

	Unfortunately, due to current limitations in Sphinx, it is not possible
	to generate these lists completely automatically.
	Therefore, when you add a function or class, you need to add its name
	manually to the corresponding rst file in the doc/ folder.

	Note that only top-level packages have their own rst file. Sub-packages
	are listed in the rst file of their parent package. (Only exception
	currently is plot.cm since plot and plot.cm contain many examples)

	* doc/typhon.arts.xml.rst: Merged into typhon.arts.

	* doc/conf.py:

	Link to Python 3.5 docs, not the dev version.

	Add autosummary extension.

	* doc/typhon.*.rst:

	Restructured by using the autosummary extensions.

	Added a list of all public functions and classes for each package.

	* typhon/geodesy/__init__.py:

	Cleanup short function descriptions.

	* typhon/utils/__init__.py, typhon/files/__init__.py:

	Move module description from rst file to py file.

	* doc/Makefile:

	Remove generated dir on clean.
